[package]
name = "onnx-helpers"
version = "2.0.0"
authors = ["Łukasz Kurowski <crackcomm@gmail.com>"]
edition = "2018"
license = "MIT"
description = "ONNX model construction helpers."
homepage = "https://github.com/crackcomm/onnx-helpers-rs"
repository = "https://github.com/crackcomm/onnx-helpers-rs.git"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "^0.5.3"
prost = "^0.6.1"
onnx-pb = "^0.1.1"

[dev-dependencies]
onnx-shape-inference = "^1.0.0"
